# PGforDerma

./: .gitignore  CMakeLists.txt  README.md
PGforDerma/: CMakeLists.txt  Definitions.hpp  PGforDerma.cpp  PGforDerma.hpp  RandomNode.cpp  RandomNode.hpp  RandomTree.cpp  RandomTree.hpp  Utils.cpp  Utils.hpp
dataset/: .gitignore  Dermatology.csv  fix_headers.py
